--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     volumes:
       - /var/log/suricata:/var/log/suricata
       - ./suricata/rules/my.rules:/var/lib/suricata/rules/my.rules
+      - ./suricata/dist/suricata.yaml:/etc/suricata/suricata.yaml
 
 
   elasticsearch:
